--- a/cityharvest/assets/css/events.css
+++ b/cityharvest/assets/css/events.css
@@ -65,7 +65,7 @@
 ===================================================== */
 #events {
     padding-top: 40px;
-    padding-bottom: 50px;
+    padding-bottom: 30px;
 }
 
 #events .container {
@@ -73,30 +73,11 @@
 }
 
 #events .day {
-   margin-right: 5px;
+    margin-right: 5px;
 }
 
 #events .row {
     gap: .3rem;
-}
-
-#events .card {
-    overflow: hidden;
-    position: relative;
-}
-
-#events .card-img {
-    height: 230px;
-}
-
-#events .card .card-img-top {
-    transition: transform 1s ease-in-out;
-    height: 230px;
-    object-fit: cover;
-}
-
-#events .card .card-img-top:hover {
-    transform: scale(1.6);
 }
 
 #events .events-title {
@@ -128,18 +109,19 @@
     margin-bottom: 30px;
 }
 
-#events .card-body {
-    padding: 18px 30px 25px 30px;
+#events .card {
+    overflow: hidden;
+}
+
+#events .card-img {
+    height: 230px;
+    position: relative;
 }
 
 #events .card .events-text {
-    content: "";
     position: absolute;
-    top: 30px;
-    right: -32px;
-    bottom: 0;
-    transform: rotate(-90deg);
-    box-shadow: 0px 10px 3px rgba(0, 0, 0, 0.1);
+    right: 25px;
+    bottom: 25px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -148,7 +130,23 @@
     width: 100px;
     height: 20px;
     padding: 20px;
-    z-index: 1;
+    z-index: 2;
+    border-radius: 10px;
+    font-weight: bold;
+}
+
+#events .card .card-img-top {
+    transition: transform 1s ease-in-out;
+    height: 230px;
+    object-fit: cover;
+}
+
+#events .card .card-img-top:hover {
+    transform: scale(1.6);
+}
+
+#events .card-body {
+    padding: 18px 30px 25px 30px;
 }
 
 #events .card-body>* {
@@ -160,7 +158,7 @@
 }
 
 #events .card-body p {
-    text-align: justify;
+    text-align: start;
 }
 
 #events .card-body .btn {
@@ -182,9 +180,14 @@
     align-items: center;
 }
 
-#events .card-btns .btn.direction {
+#events .card-btns .btn.event {
     background: transparent;
     color: var(--primary-color);
+}
+
+#events .card-btns .btn.event:hover {
+    background: var(--primary-color);
+    color: var(--white-color);
 }
 
 
@@ -212,8 +215,8 @@
 
 @media only screen and (max-width: 578px) {
     #events {
-        padding-top: 45px;
-        padding-bottom: 28px;
+        padding-top: 30px;
+        padding-bottom: 22px;
     }
 
     #events .container {
@@ -260,4 +263,153 @@
         font-size: 10px;
     }
 
+}
+
+/* =====================================================
+# Weekly-services
+===================================================== */
+#weekly-services {
+    padding-top: 0px;
+    padding-bottom: 50px;
+}
+
+#weekly-services .container {
+    overflow: hidden;
+}
+
+
+#weekly-services .row {
+    gap: .5rem;
+}
+
+#weekly-services .card {
+    overflow: hidden;
+    position: relative;
+}
+
+#weekly-services .card-img {
+    height: 230px;
+}
+
+#weekly-services .card .card-img-top {
+    transition: transform 1s ease-in-out;
+    height: 230px;
+    object-fit: cover;
+}
+
+#weekly-services .card .card-img-top:hover {
+    transform: scale(1.6);
+}
+
+#weekly-services .weekly-services-title {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    text-transform: uppercase;
+    color: var(--black-color);
+    margin-bottom: 50px;
+    font-size: 40px;
+    font-weight: 600;
+}
+
+#weekly-services .weekly-services-title::before {
+    content: '';
+    position: absolute;
+    width: 100px;
+    height: 7px;
+    bottom: 0;
+    top: 65px;
+    background: var(--primary-color);
+    border-radius: 5px;
+}
+
+#weekly-services .weekly-services-para {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+#weekly-services .card-body {
+    padding: 18px 40px 25px 40px;
+}
+
+#weekly-services .card .weekly-services-text {
+    content: "";
+    position: absolute;
+    right: -32px;
+    bottom: 25px;
+    transform: rotate(-90deg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--primary-color);
+    color: var(--white-color);
+    width: 100px;
+    height: 20px;
+    padding: 20px;
+    z-index: -1;
+    border-top-right-radius: 15px;
+}
+
+#weekly-services .card-body>* {
+    margin-top: 17px;
+}
+
+#weekly-services .card-body h2 {
+    text-transform: uppercase;
+}
+
+#weekly-services .card-body p {
+    text-align: justify;
+}
+
+#weekly-services .card-body .btn {
+    margin-bottom: 10px;
+    padding: 9px 22px;
+    background: var(--primary-color);
+    color: var(--white-color);
+    transition: all .3s;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+}
+
+#weekly-services .card-body .btn:hover {
+    opacity: .8;
+}
+
+/* ==== Media Queries ==== */
+
+@media only screen and (max-width: 1060px) {
+    #weekly-services .container {
+        padding: 0 20px;
+    }
+
+    #weekly-services .weekly-services-title {
+        margin-bottom: 55px;
+        font-size: 30px;
+    }
+
+    #weekly-services .weekly-services-title::before {
+        top: 58px;
+    }
+}
+
+@media only screen and (max-width: 350px) {
+    #weekly-services {
+        padding-top: 10px;
+        padding-bottom: 50px;
+    }
+
+    #weekly-services .container {
+        padding: 0 20px;
+    }
+
+    #weekly-services .weekly-services-title {
+        margin-bottom: 55px;
+        font-size: 25px;
+    }
+
+    #weekly-services .weekly-services-title::before {
+        top: 50px;
+    }
 }
