--- a/cityharvest/assets/css/leaders.css
+++ b/cityharvest/assets/css/leaders.css
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     height: 60vh;
-    background: linear-gradient(360deg, rgba(65, 146, 3, 0.85), rgba(16, 16, 15, 0.85)), url('../img/get-involved/get-involved.jpg');
+    background: linear-gradient(360deg, rgba(65, 146, 3, 0.85), rgba(16, 16, 15, 0.85)), url('../img/pastors/pastors.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
@@ -61,26 +61,22 @@
 }
 
 /* =====================================================
-# get_involved
+# Pastors
 ===================================================== */
-#get_involved {
+#pastors {
     padding-top: 40px;
-    padding-bottom: 50px;
+    padding-bottom: 35px;
 }
 
-#get_involved .container {
-    overflow: hidden;
+#pastors .container {
+    padding: 0 20px;
 }
 
-#get_involved .day {
-    margin-right: 5px;
+#pastors .row {
+    gap: 3rem;
 }
 
-#get_involved .row {
-    gap: .3rem;
-}
-
-#get_involved .get_involved-title {
+#pastors .pastors-title {
     position: relative;
     display: flex;
     justify-content: center;
@@ -88,12 +84,12 @@
     text-align: center;
     text-transform: uppercase;
     color: var(--black-color);
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     font-size: 40px;
     font-weight: 600;
 }
 
-#get_involved .get_involved-title::before {
+#pastors .pastors-title::before {
     content: '';
     position: absolute;
     width: 100px;
@@ -104,135 +100,168 @@
     border-radius: 5px;
 }
 
-#get_involved .get_involved-para {
-    text-align: center;
-    margin-bottom: 30px;
+#pastors .pastors-img img {
+    width: 100%;
 }
-
-#get_involved .card {
-    overflow: hidden;
-}
-
-#get_involved .card-img {
-    height: 230px;
-    position: relative;
-}
-
-#get_involved .card .get_involved-text {
-    position: absolute;
-    right: 25px;
-    bottom: 25px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: var(--primary-color);
-    color: var(--white-color);
-    width: 100px;
-    height: 20px;
-    padding: 20px;
-    z-index: 2;
-    border-radius: 10px;
-    font-weight: bold;
-}
-
-#get_involved .card .card-img-top {
-    transition: transform 1s ease-in-out;
-    height: 230px;
-    object-fit: cover;
-}
-
-#get_involved .card .card-img-top:hover {
-    transform: scale(1.6);
-}
-
-#get_involved .card-body {
-    padding: 18px 30px 25px 30px;
-}
-
-#get_involved .card-body>* {
-    margin-top: 17px;
-}
-
-#get_involved .card-body h2 {
-    text-transform: uppercase;
-}
-
-#get_involved .card-body p {
-    text-align: start;
-}
-
-#get_involved .card-body .btn {
-    margin-bottom: 10px;
-    padding: 9px 15px;
-    background: var(--primary-color);
-    color: var(--white-color);
-    transition: all .3s;
-    font-size: 16px;
-}
-
-#get_involved .card-body .btn:hover {
-    opacity: .8;
-}
-
-#get_involved .card-btns {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-#get_involved .card-btns .btn.event {
-    background: transparent;
-    color: var(--primary-color);
-}
-
-#get_involved .card-btns .btn.event:hover {
-    background: var(--primary-color);
-    color: var(--white-color);
-}
-
 
 /* ==== Media Queries ==== */
-
 @media only screen and (max-width: 1060px) {
-    #get_involved .container {
-        padding: 0 20px;
+    #pastors .container {
+        padding: 0 40px;
     }
 
-    #get_involved .get_involved-title {
+    #pastors .pastors-title {
         margin-bottom: 55px;
         font-size: 30px;
     }
 
-    #get_involved .get_involved-title::before {
+    #pastors .pastors-title::before {
+        top: 58px;
+    }
+}
+
+@media only screen and (max-width: 578px) {
+    #pastors {
+        padding-top: 30px;
+        padding-bottom: 20px;
+    }
+
+    #pastors .container {
+        padding: 0 30px;
+    }
+
+    #pastors .pastors-title {
+        margin-bottom: 55px;
+        font-size: 30px;
+    }
+
+    #pastors .pastors-title::before {
         top: 58px;
     }
 
-    #get_involved .card-body .btn {
+
+    #pastors .pastors-txt {
+        text-align: center;
+        margin-top: -10px;
+    }
+}
+
+@media only screen and (max-width: 350px) {
+
+    #pastors .container {
+        padding: 0 20px;
+    }
+
+    #pastors .pastors-title {
+        margin-bottom: 55px;
+        font-size: 25px;
+    }
+
+    #pastors .pastors-title::before {
+        top: 50px;
+    }
+
+    #pastors .card-body .btn {
+        font-size: 10px;
+    }
+}
+
+/* =====================================================
+# Other-pastors
+===================================================== */
+#other-pastors {
+    padding-top: 0px;
+    padding-bottom: 50px;
+}
+
+#other-pastors .container {
+    overflow: hidden;
+}
+
+#other-pastors .row {
+    gap: .3rem;
+}
+
+#other-pastors .other-pastors-title {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    text-transform: uppercase;
+    color: var(--black-color);
+    margin-bottom: 50px;
+    font-size: 40px;
+    font-weight: 600;
+}
+
+#other-pastors .other-pastors-title::before {
+    content: '';
+    position: absolute;
+    width: 100px;
+    height: 7px;
+    bottom: 0;
+    top: 65px;
+    background: var(--primary-color);
+    border-radius: 5px;
+}
+
+#other-pastors .card-body {
+    padding: 13px 30px 20px 30px;
+}
+
+#other-pastors .card-body h2 {
+    text-transform: uppercase;
+    font-size: 20px;
+}
+
+#other-pastors .card-body p {
+    text-align: start;
+    margin-top: 5px;
+}
+
+/* ==== Media Queries ==== */
+
+@media only screen and (max-width: 1060px) {
+    #other-pastors .container {
+        padding: 0 20px;
+    }
+
+    #other-pastors .other-pastors-title {
+        margin-bottom: 55px;
+        font-size: 30px;
+    }
+
+    #other-pastors .other-pastors-title::before {
+        top: 58px;
+    }
+
+    #other-pastors .card-body .btn {
         font-size: 14px;
     }
 
 }
 
 @media only screen and (max-width: 578px) {
-    #get_involved {
-        padding-top: 30px;
+    #other-pastors {
+        padding-top: 0px;
         padding-bottom: 40px;
     }
 
-    #get_involved .container {
+    #other-pastors .container {
         padding: 0 20px;
     }
 
-    #get_involved .get_involved-title {
+    #other-pastors .other-pastors-title {
         margin-bottom: 55px;
         font-size: 30px;
     }
 
-    #get_involved .get_involved-title::before {
+    #other-pastors .other-pastors-title::before {
         top: 58px;
     }
 
-    #get_involved .card-body .btn {
+    #other-pastors .card-body .btn {
         font-size: 14px;
     }
 
@@ -241,25 +270,25 @@
 /* ==== Media Queries ==== */
 
 @media only screen and (max-width: 350px) {
-    #get_involved {
+    #other-pastors {
         padding-top: 45px;
         padding-bottom: 25px;
     }
 
-    #get_involved .container {
+    #other-pastors .container {
         padding: 0 20px;
     }
 
-    #get_involved .get_involved-title {
+    #other-pastors .other-pastors-title {
         margin-bottom: 55px;
         font-size: 25px;
     }
 
-    #get_involved .get_involved-title::before {
+    #other-pastors .other-pastors-title::before {
         top: 50px;
     }
 
-    #get_involved .card-body .btn {
+    #other-pastors .card-body .btn {
         font-size: 10px;
     }
 
