--- a/cityharvest/assets/css/beliefs.css
+++ b/cityharvest/assets/css/beliefs.css
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     height: 60vh;
-    background: linear-gradient(360deg, rgba(65, 146, 3, 0.85), rgba(16, 16, 15, 0.85)), url('../img/get-involved/get-involved.jpg');
+    background: linear-gradient(360deg, rgba(65, 146, 3, 0.85), rgba(16, 16, 15, 0.85)), url('../img/about/about.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
@@ -61,26 +61,22 @@
 }
 
 /* =====================================================
-# get_involved
+# About
 ===================================================== */
-#get_involved {
+#about {
     padding-top: 40px;
     padding-bottom: 50px;
 }
 
-#get_involved .container {
+#about .container {
     overflow: hidden;
 }
 
-#get_involved .day {
-    margin-right: 5px;
-}
-
-#get_involved .row {
+#about .row {
     gap: .3rem;
 }
 
-#get_involved .get_involved-title {
+#about .about-title {
     position: relative;
     display: flex;
     justify-content: center;
@@ -93,7 +89,7 @@
     font-weight: 600;
 }
 
-#get_involved .get_involved-title::before {
+#about .about-title::before {
     content: '';
     position: absolute;
     width: 100px;
@@ -104,163 +100,89 @@
     border-radius: 5px;
 }
 
-#get_involved .get_involved-para {
+#about .about-para {
     text-align: center;
     margin-bottom: 30px;
 }
 
-#get_involved .card {
-    overflow: hidden;
-}
-
-#get_involved .card-img {
-    height: 230px;
-    position: relative;
-}
-
-#get_involved .card .get_involved-text {
+#about .card::before {
+    content: '';
     position: absolute;
-    right: 25px;
-    bottom: 25px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    left: 0px;
+    top: 0px;
     background: var(--primary-color);
-    color: var(--white-color);
-    width: 100px;
+    width: 15px;
     height: 20px;
-    padding: 20px;
-    z-index: 2;
-    border-radius: 10px;
-    font-weight: bold;
 }
 
-#get_involved .card .card-img-top {
-    transition: transform 1s ease-in-out;
-    height: 230px;
-    object-fit: cover;
+#about .card-body {
+    padding: 20px 30px 25px 30px;
 }
 
-#get_involved .card .card-img-top:hover {
-    transform: scale(1.6);
+#about .card-body h3 {
+    margin-bottom: 5px;
 }
 
-#get_involved .card-body {
-    padding: 18px 30px 25px 30px;
-}
-
-#get_involved .card-body>* {
-    margin-top: 17px;
-}
-
-#get_involved .card-body h2 {
-    text-transform: uppercase;
-}
-
-#get_involved .card-body p {
+#about .card-body p {
     text-align: start;
-}
-
-#get_involved .card-body .btn {
-    margin-bottom: 10px;
-    padding: 9px 15px;
-    background: var(--primary-color);
-    color: var(--white-color);
-    transition: all .3s;
-    font-size: 16px;
-}
-
-#get_involved .card-body .btn:hover {
-    opacity: .8;
-}
-
-#get_involved .card-btns {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-#get_involved .card-btns .btn.event {
-    background: transparent;
-    color: var(--primary-color);
-}
-
-#get_involved .card-btns .btn.event:hover {
-    background: var(--primary-color);
-    color: var(--white-color);
 }
 
 
 /* ==== Media Queries ==== */
 
 @media only screen and (max-width: 1060px) {
-    #get_involved .container {
+    #about .container {
         padding: 0 20px;
     }
 
-    #get_involved .get_involved-title {
+    #about .about-title {
         margin-bottom: 55px;
         font-size: 30px;
     }
 
-    #get_involved .get_involved-title::before {
+    #about .about-title::before {
         top: 58px;
     }
-
-    #get_involved .card-body .btn {
-        font-size: 14px;
-    }
-
 }
 
 @media only screen and (max-width: 578px) {
-    #get_involved {
+    #about {
         padding-top: 30px;
         padding-bottom: 40px;
     }
 
-    #get_involved .container {
+    #about .container {
         padding: 0 20px;
     }
 
-    #get_involved .get_involved-title {
+    #about .about-title {
         margin-bottom: 55px;
         font-size: 30px;
     }
 
-    #get_involved .get_involved-title::before {
+    #about .about-title::before {
         top: 58px;
     }
-
-    #get_involved .card-body .btn {
-        font-size: 14px;
-    }
-
 }
 
 /* ==== Media Queries ==== */
 
 @media only screen and (max-width: 350px) {
-    #get_involved {
+    #about {
         padding-top: 45px;
-        padding-bottom: 25px;
+        padding-bottom: 40px;
     }
 
-    #get_involved .container {
+    #about .container {
         padding: 0 20px;
     }
 
-    #get_involved .get_involved-title {
+    #about .about-title {
         margin-bottom: 55px;
         font-size: 25px;
     }
 
-    #get_involved .get_involved-title::before {
+    #about .about-title::before {
         top: 50px;
     }
-
-    #get_involved .card-body .btn {
-        font-size: 10px;
-    }
-
 }
