--- a/cityharvest/assets/css/index.css
+++ b/cityharvest/assets/css/index.css
@@ -50,19 +50,41 @@
     text-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
 }
 
-#hero .hero-txt .btn {
+#hero .flex-btns {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .7rem;
+}
+
+#hero .hero-txt .btn-new {
     text-decoration: none;
-    background: var(--primary-color);
-    color: #fff;
-    border: 1px solid var(--primary-color);
+    background: transparent;
+    color: var(--white-color);
+    border: 2px solid var(--primary-color);
     border-radius: 50px;
     padding: 13px 52px;
     transition: all .3s;
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
 }
 
-#hero .hero-txt .btn:hover {
-    opacity: 0.8;
+#hero .hero-txt .btn-new:hover {
+    background: var(--primary-color);
+}
+
+#hero .hero-txt .btn-join {
+    text-decoration: none;
+    background: var(--primary-color);
+    color: var(--white-color);
+    border: 2px solid var(--primary-color);
+    border-radius: 50px;
+    padding: 13px 52px;
+    transition: all .3s;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+}
+
+#hero .hero-txt .btn-join:hover {
+    background: transparent;
 }
 
 /* ==== Media Queries ==== */
@@ -76,6 +98,11 @@
         font-size: 35px;
         line-height: 2.2rem;
         margin-bottom: 30px;
+    }
+
+    #hero .flex-btns {
+        flex-direction: column;
+        gap: 1rem;
     }
 
 }
@@ -101,6 +128,19 @@
         font-size: 35px;
         line-height: 2.2rem;
         margin-bottom: 40px;
+    }
+
+}
+
+@media only screen and (max-width: 350px) {
+    #hero .hero-txt {
+        margin-bottom: 50px;
+    }
+
+    #hero .hero-txt h2 {
+        font-size: 30px;
+        line-height: 2.2rem;
+        margin-bottom: 30px;
     }
 
 }
