--- a/cityharvest/assets/css/header.css
+++ b/cityharvest/assets/css/header.css
@@ -56,7 +56,7 @@
     font-weight: bold;
 }
 
-/* == About - Drop-down */
+/* == About - Drop-down == */
 .navbar .dropdown {
     position: relative;
 }
@@ -101,6 +101,8 @@
 .navbar .dropdown:hover .dropdown-menu {
     display: flex;
 }
+
+/* == END About - Drop-down == */
 
 /* == Location Drop-down == */
 .navbar .dropdown-location {
@@ -148,6 +150,57 @@
 .navbar .dropdown-location:hover .dropdown-menu-location {
     display: flex;
 }
+
+/* == END Location Drop-down == */
+
+/* == Resources Drop-down == */
+.navbar .dropdown-resources {
+    position: relative;
+}
+
+.navbar .dropdown-resources .dropdown-menu-resources {
+    position: absolute;
+    left: 32px;
+    background: var(--white-color);
+    color: var(--light-color);
+    padding: 0px 0px 8px 0px;
+    display: none;
+    justify-content: center;
+    flex-direction: column;
+    gap: .5rem;
+    width: 200px;
+    z-index: 1030;
+    margin-top: 3px;
+    transition: all .3s;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+    border-top: 3px solid var(--primary-color);
+    animation: zoom-in .3s alternate forwards ease-in-out;
+}
+
+.navbar .dropdown-resources .dropdown-menu-resources .nav-item {
+    text-decoration: none;
+    border-bottom: 1px solid var(--light-gray-color);
+}
+
+.navbar .dropdown-resources .dropdown-menu-resources :nth-child(4) {
+    border-bottom: none;
+}
+
+.navbar .dropdown-resources .dropdown-menu-resources .nav-link {
+    text-decoration: none;
+    color: var(--dark-color);
+    transition: all .3s;
+}
+
+.navbar .dropdown-resources .dropdown-menu-resources .nav-link:hover {
+    color: var(--primary-color);
+}
+
+.navbar .dropdown-resources:hover .dropdown-menu-resources {
+    display: flex;
+}
+
+/* == END Resources Drop-down == */
 
 .navbar .btn.login {
     text-decoration: none;
