--- a/cityharvest/assets/css/beliefs.css
+++ b/cityharvest/assets/css/beliefs.css
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     height: 60vh;
-    background: linear-gradient(360deg, rgba(65, 146, 3, 0.85), rgba(16, 16, 15, 0.85)), url('../img/about/about.jpg');
+    background: linear-gradient(360deg, rgba(65, 146, 3, 0.85), rgba(16, 16, 15, 0.85)), url('../img/about/about2.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
