--- a/cityharvest/assets/css/ch_dodoma.css
+++ b/cityharvest/assets/css/ch_dodoma.css
@@ -384,6 +384,21 @@
     right: 35px;
     font-size: 25px;
     color: var(--primary-color);
+    transition: color .3s;
+}
+
+#contact-info .card i:hover {
+    color: var(--gray-color);
+}
+
+
+#contact-info .card  p a {
+    color: var(--dark-color);
+    transition: color .3s;
+}
+
+#contact-info .card p a:hover {
+    color: var(--primary-color);
 }
 
 #contact-info .card .left-our {
@@ -427,7 +442,6 @@
         top: 58px;
     }
 }
-
 
 @media only screen and (max-width: 786px) {
     #contact-info {
