--- a/cityharvest/assets/css/ch_kigamboni.css
+++ b/cityharvest/assets/css/ch_kigamboni.css
@@ -178,7 +178,7 @@
     justify-content: center;
     align-items: center;
     height: 60vh;
-    background: linear-gradient(360deg, rgba(65, 146, 3, 0.85), rgba(16, 16, 15, 0.85)), url('../img/church/ch-kg1.png');
+    background: linear-gradient(360deg, rgba(65, 146, 3, 0.85), rgba(16, 16, 15, 0.85)), url('../img/church/ch-kg1.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: top;
@@ -383,6 +383,20 @@
     right: 35px;
     font-size: 25px;
     color: var(--primary-color);
+    transition: color .3s;
+}
+
+#contact-info .card i:hover {
+    color: var(--gray-color);
+}
+
+#contact-info .card  p a {
+    color: var(--dark-color);
+    transition: color .3s;
+}
+
+#contact-info .card p a:hover {
+    color: var(--primary-color);
 }
 
 #contact-info .card .left-our {
@@ -426,7 +440,6 @@
         top: 58px;
     }
 }
-
 
 @media only screen and (max-width: 786px) {
     #contact-info {
