--- a/cityharvest/assets/css/contact.css
+++ b/cityharvest/assets/css/contact.css
@@ -178,7 +178,7 @@
     justify-content: center;
     align-items: center;
     height: 60vh;
-    background: linear-gradient(360deg, rgba(65, 146, 3, 0.95), rgba(16, 16, 15, 0.95)), url('../img/church/church1.png');
+    background: linear-gradient(360deg, rgba(65, 146, 3, 0.95), rgba(16, 16, 15, 0.95)), url('../img/church/church1.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: bottom;
@@ -275,6 +275,20 @@
     top: 35px;
     right: 35px;
     font-size: 25px;
+    color: var(--primary-color);
+    transition: color .3s;
+}
+
+#contact-info .card i:hover {
+    color: var(--gray-color);
+}
+
+#contact-info .card p a {
+    color: var(--dark-color);
+    transition: color .3s;
+}
+
+#contact-info .card p a:hover {
     color: var(--primary-color);
 }
 
